--- a/css/estilo.css
+++ b/css/estilo.css
@@ -35,6 +35,12 @@ body #page .main #content ul li.selected span { color: #FFFFFF; }
 body.smartphone #page .main #content { width: 100%; }
 
 
+body #page .main #content dl dt { font-size: 16px; color: #FFFFFF; padding: 10px; border-bottom: 1px #FFFFFF solid; font-weight: bold; background-color: #3A87AD; }
+body #page .main #content dl dd ul li { vertical-align: middle; height: 50px; line-height: 50px; padding: 0 10px; color: #777777; }
+body #page .main #content dl dd ul li input.check { float: right; margin-top: 18px; }
+body #page .main #content dl dd ul li a { text-decoration: none; color: #777777; font-weight: bold; }
+
+
 body #page .main #contentDetail { width: 60%; height: 100%; position: relative; font-size: 19px; margin-right: -1px; }
 body #page .main #contentDetail #scrollerDetail { padding: 20px; }
 body #page .main .container { position: absolute; top: 53px; right: 0; left: 0; bottom: 0; background: none repeat scroll 0 0 #FFFFFF; }
@@ -59,21 +65,67 @@ body #menu #personalInfo .personalData span { display: block; }
 body #menu #personalInfo .personalData span.name { font-size: 15px; }
 body #menu #personalInfo .personalData span.email { font-size: 13px;}
 body #menu #personalInfo .personalData #quota {  }
-body #menu #personalInfo .personalData #quota .bar { font-size: 11px; display: inline;  width: 160px; border: 1px #444444 solid; display: inline-block; background-color: #FFF; }
-body #menu #personalInfo .personalData #quota .bar span { background: transparent; width: 160px; text-align: center; color: #000; }
-body #menu #personalInfo .personalData #quota .bar div.usedQuota { background: #CCCCCC; width: 50%; }
-body #menu h3 { background-color: #2C2C2C; color: #EFEFEF; height: 20px; padding: 5px; line-height: 20px; font-size: 20px; }
-body #menu ul#mainMenu { background-color: #333333; padding: 10px 0; }
-body #menu ul#mainMenu { line-height: 20px; }
-body #menu ul#mainMenu li a { height: 32px; color: #CCCCCC; text-decoration: none; display: block; padding: 8px 10px; margin: 0 20px 0 10px; font-weight: bold; }
-body #menu ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
-body #menu ul#mainMenu li a img { width: 40px; height: 32px; }
-body #menu ul#mainMenu li a span { height: 32px; line-height: 32px; vertical-align: top; }
+body #menu #personalInfo .personalData #quota .bar { font-size: 11px; display: inline;  height: 14px; width: 160px; border: 1px #444444 solid; display: inline-block; background-color: #FFF; }
+body #menu #personalInfo .personalData #quota .bar div.usedQuota { background-color: #ABC6E1; height: 14px; }
+body #menu #personalInfo .personalData #quota .bar span { background: transparent; width: 160px; text-align: center; color: #000; margin-top: -14px; }
+/*body #menu dl { height: 100%; }*/
+body #menu dl dt { background-color: #2C2C2C; color: #EFEFEF; height: 20px; padding: 5px; line-height: 20px; font-size: 20px; }
+body #menu dl dd ul li a { height: 32px; color: #CCCCCC; text-decoration: none; display: block; padding: 8px 10px; margin: 0 20px 0 10px; font-weight: bold; }
+body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; }
+body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; }
+body #menu dl dd ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
+body #menu dl dd ul#mainMenu li a img { width: 40px; height: 32px; }
+body #menu dl dd ul#mainMenu li a span { height: 32px; line-height: 32px; vertical-align: top; }
+body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
+/*body #menu dl dd ul#myFolders li a { height: 32px; text-decoration: none; }*/
+body #menu dl dd ul#myFolders { background-color: #FFF; }
+body #menu dl dd ul#myFolders li a { height: 30px; color: #333333; margin-right: 10px; }
+body #menu dl dd ul#myFolders li a img { width: 30px; height: 30px; }
+body #menu dl dd ul#myFolders li a span { line-height: 30px; vertical-align: top; margin-left: 5px; }
+body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
 
 /** Menu de contexto **/
 body #page .top #contextMenu { background-color: #333333; width: 200px; position: absolute; top: 53px; right: 0; z-index: 9999; }
 body #page .top #contextMenu ul li { border-bottom: 1px solid #2C2C2C; }
 body #page .top #contextMenu ul li a { color: #EFEFEF; text-decoration: none; display: block; padding: 15px 10px; width: 200px; }
+
+
+/** Preferências **/
+body form { font-size: 16px; padding: 15px; }
+
+  /** Preferências > Alterar senha **/
+  body form#changePassword ol li { margin: 15px 25px 15px 15px; }
+  body form#changePassword ol li input { width: 100%; height: 30px; padding: 5px; }
+
+  /** Preferências > Resultados por página **/
+  body form#resultsPage ol { border: 1px #CCCCCC solid; border-bottom: 0; }
+  body form#resultsPage ol li { border-bottom: 1px #CCCCCC solid; height: 50px; line-height: 50px; padding: 0 10px; color: #777777; }
+  body form#resultsPage ol li input.check { float: right; margin-top: 18px; }
+
+  /** Preferências > Assinatura de e-mail **/
+  body form#emailSignature ol li { margin: 15px 25px 15px 15px; }
+  body form#emailSignature ol li textarea { width: 100%; height: 150px; }
+
+  /** Preferências > Suporte / Sugestões **/
+  body form#support ol li { margin: 15px 25px 15px 15px; }
+  body form#support ol li textarea { width: 100%; height: 150px; }
+
+  /** Preferências > Sobre o expresso **/
+  /*body dl#aboutExpresso { margin: 15px 25px; }*/
+  body #page .main dl#aboutExpresso dt { border-bottom: 1px solid #3A87AD; color: #3A87AD; font-size: 16px; font-weight: bold; padding: 10px; margin-top: 1px; background-color: #FFF; }
+  body #page .main dl#aboutExpresso dd { font-size: 14px; color: #777777; padding: 10px; margin-bottom: 5px;  }
+  body #page .main dl#aboutExpresso dd a { color: #777777; }
+  body #page .main dl#aboutExpresso dd ul { background-color: transparent; }
+  body #page .main dl#aboutExpresso dd ul li { height: auto; border: 0; line-height: normal; margin: 5px 0; list-style-position: inside; list-style-type: circle; }
+
+  /** Preferências > Créditos **/
+  /*body dl#credits { margin: 15px 25px; }*/
+  body #page .main dl#credits dt { border-bottom: 1px solid #3A87AD; color: #3A87AD; font-size: 16px; font-weight: bold; padding: 10px; margin-top: 1px; background-color: #FFF; }
+  body #page .main dl#credits dd { font-size: 14px; color: #777777; padding: 10px; margin-bottom: 5px;  }
+  body #page .main dl#credits dd a { color: #777777; }
+  body #page .main dl#credits dd ul { background-color: transparent; }
+  body #page .main dl#credits dd ul li { height: auto; border: 0; line-height: normal; margin: 5px 0; list-style-position: inside; list-style-type: circle; }
+
 
 /** Pull down styles **/
 #pullDown, #pullUp { 
@@ -328,16 +380,16 @@ body #page .top #contextMenu ul li a { color: #EFEFEF; text-decoration: none; di
 
 .login-input {
   display: block;
-  width: 100%;
+  width: 90%;
   height: 37px;
   margin-bottom: 20px;
-  padding: 0 9px;
+  padding: 0px 9px;
   color: #333;
   text-shadow: 0 1px black;
   background: #EFEFEF;
-  border: 1px solid #333;
+  border: 0px solid #333;
   border-top-color: #333;
-  border-radius: 4px;
+  border-radius: 10px;
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
@@ -373,6 +425,7 @@ body #page .top #contextMenu ul li a { color: #EFEFEF; text-decoration: none; di
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
   -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
+  text-align: center;
 }
 .login-box a {
   color: #eee;
@@ -423,3 +476,10 @@ body #page .top #contextMenu ul li a { color: #EFEFEF; text-decoration: none; di
     color: #FFFFFF;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
+
+
+
+
+
+
+
