Alterações de Padronização das Ações, Menus, e importação de algumas telas do protótipo.

--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -10,14 +10,11 @@
       </ul> 
       
       <ul class="right topButtons">
-        <li><a href="" class="contextMenu">Menu de contexto</a></li>
+        <li><a id="contextMenuButton" href="#" class="hidden contextMenu">Menu de contexto</a></li>
       </ul>
 
       <div id="contextMenu" class="hidden">
         <ul>
-          <li><a href="#">Contexto 1</a></li>
-          <li><a href="#">Contexto 2</a></li>
-          <li><a href="#">Contexto 3</a></li>
         </ul>
       </div>
 
