--- a/css/estilo.css
+++ b/css/estilo.css
@@ -59,30 +59,88 @@ body #page .main #contentDetail .chatTextField input:focus { border: 1px solid #
 body #menu { width: 50%; height: 100%; position: absolute; margin-top: -53px; background: url("../imgs/bg.png"); display: none; }
 body #menu.expanded { display: block; }
 body #menu #personalInfo { height: 61px; padding: 10px 10px; border-bottom: 1px solid #2C2C2C }
-body #menu #personalInfo img { float: left; width: 46px; height: 61px; border-radius: 6px 6px 6px 6px}
+body #menu #personalInfo img { float: left; width: 46px; height: 61px; border-radius: 6px 6px 6px 6px; background: url('../imgs/contactPhotoFrameNone.png') center center no-repeat; }
 body #menu #personalInfo .personalData { margin: 0 0 0 56px; height: 61px; color: #FFF; }
 body #menu #personalInfo .personalData span { display: block; }
 body #menu #personalInfo .personalData span.name { font-size: 15px; }
 body #menu #personalInfo .personalData span.email { font-size: 13px;}
 body #menu #personalInfo .personalData #quota {  }
-body #menu #personalInfo .personalData #quota .bar { font-size: 11px; display: inline;  height: 14px; width: 160px; border: 1px #444444 solid; display: inline-block; background-color: #FFF; }
+body #menu #personalInfo .personalData #quota .bar { font-size: 11px; display: inline;  height: 14px; width: 200px; border: 1px #444444 solid; display: inline-block; background-color: #FFF; }
 body #menu #personalInfo .personalData #quota .bar div.usedQuota { background-color: #ABC6E1; height: 14px; }
-body #menu #personalInfo .personalData #quota .bar span { background: transparent; width: 160px; text-align: center; color: #000; margin-top: -14px; }
+body #menu #personalInfo .personalData #quota .bar span { background: transparent; width: 200px; text-align: center; color: #000; margin-top: -14px; }
 /*body #menu dl { height: 100%; }*/
 body #menu dl dt { background-color: #2C2C2C; color: #EFEFEF; height: 20px; padding: 5px; line-height: 20px; font-size: 20px; }
 body #menu dl dd ul li a { height: 32px; color: #CCCCCC; text-decoration: none; display: block; padding: 8px 10px; margin: 0 20px 0 10px; font-weight: bold; }
 body #menu dl dd ul#mainMenu { background-color: #333333; padding: 10px 0; }
 body #menu dl dd ul#mainMenu li.selected { background: transparent url('../imgs/seta.png') no-repeat right 16px; }
 body #menu dl dd ul#mainMenu li.selected a { color: #EFEFEF; border: 1px solid #444444; background-color: #222222; border-radius: 5px 5px 5px 5px; }
-body #menu dl dd ul#mainMenu li a img { width: 40px; height: 32px; }
-body #menu dl dd ul#mainMenu li a span { height: 32px; line-height: 32px; vertical-align: top; }
+body #menu dl dd ul#mainMenu li a span { float: left; margin-left: 55px; height: 32px; line-height: 32px; vertical-align: top; }
+body #menu dl dd ul#mainMenu li a .icon { width: 40px; height: 32px; }
+body #menu dl dd ul#mainMenu li a .icon-email { 
+   border-radius: 5px;
+  background: url("../imgs/icon-email-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+body #menu dl dd ul#mainMenu li a .icon-agenda { 
+   border-radius: 5px;
+  background: url("../imgs/icon-agenda-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+body #menu dl dd ul#mainMenu li a .icon-contacts { 
+   border-radius: 5px;
+  background: url("../imgs/icon-catalogo-geral-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+body #menu dl dd ul#mainMenu li a .icon-jabber { 
+   border-radius: 5px;
+  background: url("../imgs/icon-catalogo-geral-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+body #menu dl dd ul#mainMenu li a .icon-settings { 
+   border-radius: 5px;
+  background: url("../imgs/icon-settings-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+body #menu dl dd ul#mainMenu li a .icon-logout { 
+  border-radius: 5px;
+  background: url("../imgs/icon-logout-72.png") no-repeat scroll center center;
+  background-size: 40px 32px;
+}
+
+
 body #menu dl dd ul#myFolders li { border-bottom: 1px #EFEFEF solid; }
 /*body #menu dl dd ul#myFolders li a { height: 32px; text-decoration: none; }*/
 body #menu dl dd ul#myFolders { background-color: #FFF; }
 body #menu dl dd ul#myFolders li a { height: 30px; color: #333333; margin-right: 10px; }
-body #menu dl dd ul#myFolders li a img { width: 30px; height: 30px; }
-body #menu dl dd ul#myFolders li a span { line-height: 30px; vertical-align: top; margin-left: 5px; }
+body #menu dl dd ul#myFolders li a .icon { width: 30px; height: 30px; }
+body #menu dl dd ul#myFolders li a span { line-height: 30px; vertical-align: top; margin-left: 35px; float: left; width: 90%; }
 body #menu dl dd ul#myFolders li a span .badge.badge-info { float: right; }
+
+body #menu dl dd ul#myFolders li a .folder-inbox {
+  background: url("../imgs/folder-inbox.png") no-repeat scroll center center;
+}
+
+body #menu dl dd ul#myFolders li a .folder-drafts {
+  background: url("../imgs/folder-drafts.png") no-repeat scroll center center;
+}
+
+body #menu dl dd ul#myFolders li a .folder-sent {
+  background: url("../imgs/folder-sent.png") no-repeat scroll center center;
+}
+
+body #menu dl dd ul#myFolders li a .folder-blue {
+  background: url("../imgs/folder-blue.png") no-repeat scroll center center;
+}
+
+body #menu dl dd ul#myFolders li a .folder-trash-full {
+  background: url("../imgs/folder-trash-full.png") no-repeat scroll center center;
+}
+
+body #menu dl dd ul#myFolders li a .folder-shared {
+  background: url("../imgs/folder-shared.png") no-repeat scroll center center;
+}
+
+
 
 /** Menu de contexto **/
 body #page .top #contextMenu { background-color: #333333; width: 200px; position: absolute; top: 53px; right: 0; z-index: 9999; }
@@ -380,15 +438,16 @@ body form { font-size: 16px; padding: 15px; }
 
 .login-input {
   display: block;
-  width: 90%;
+  width: 100%;
   height: 37px;
   margin-bottom: 20px;
-  padding: 0px 9px;
+  padding: 0px 0px;
   color: #333;
   text-shadow: 0 1px black;
   background: #EFEFEF;
   border: 0px solid #333;
   border-top-color: #333;
+  text-align: center;
   border-radius: 10px;
   background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.2) 20%, rgba(0, 0, 0, 0));
@@ -477,6 +536,20 @@ body form { font-size: 16px; padding: 15px; }
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 }
 
+
+.product-logo {
+  width: 250px;
+  height: 67px;
+  background: url("../imgs/logo_expresso.png") no-repeat scroll center center;
+}
+
+.company-logo {
+  width: 100%;
+  height: 100px;
+  text-align: center;
+  background: url("../imgs/logo_cia_celepar.png") no-repeat scroll center center;
+  background-size: 150px 65px;
+}
 
 
 
