--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -1,5 +1,5 @@
-<div class="login-center" style="width: 245px; margin-top: 20px;">
-      <img src="./imgs/logo_expresso.png">
+<div class="login-center" style="width: 245px; margin-top: 0px;">
+      <div class="product-logo"></div>
       <br><br>
 </div>
 
@@ -10,13 +10,13 @@
                   <option value="http://seed.pr.gov.br/api/rest/">seed.pr.gov.br</option>
                   <option value="http://demo.expressolivre.org/api/rest/">demo.expressolivre.org</option>
             </select>
-            <input id="username" type="username" name="username" class="login-input" value="" placeholder="Usuário" autofocus>
-            <input id="password" type="password" name="password" class="login-input" value="" placeholder="Senha">
+            <input id="username" type="username" name="username" class="login-input" value="demo" placeholder="Usuário" autofocus>
+            <input id="password" type="password" name="password" class="login-input" value="demo22" placeholder="Senha">
             
             <input id="btn-login" type="button" value="Conectar" class="btn btn-primary"  onclick="" style="width: 100%;">
       </div>
 </form>
 <div class="login-center" style="width: 245px; margin-top: 20px;">
-	<img src="./imgs/logo_cia_celepar.png" style="width: 100px;">
+      <br>
+      <div class="company-logo"></div>
 </div>
-
