--- a/templates/chat/chatListTemplate.html
+++ b/templates/chat/chatListTemplate.html
@@ -1,10 +1,6 @@
-<h2 id="contentTitle" class="ellipsis50">Bate Papo</h2>
+<h2 class="ellipsis50">Bate Papo</h2>
 <div id="wrapper" class="container">
-	<div id="scroller">
-
-		<dl id="contactsList">
-			
-		</dl>
-
-	</div>
+  <div id="scroller">
+	<dl id="scrollerList"></dl>
+  </div>
 </div>
