--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -4,7 +4,7 @@
 </div>
 <!-- fim menu -->
   <div id="page" class="left">
-    <header class="top">
+    <header id="pageHeader" class="top">
       <ul class="left topButtons">
         <li><a id="menuButton" href="#" class="menu">Menu</a></li>
       </ul> 
