Melhorias no Formulário de Login, e salvando os dados da conexão no LocalStorage.

--- a/templates/chat/chatWindowTemplate.html
+++ b/templates/chat/chatWindowTemplate.html
@@ -1,9 +1,9 @@
 <h2 id="chatUserName">
 	<% if (contact.name != '') { %><%=contact.name%><% } else { %><%=contact.jid%><% } %>
 </h2>
-<form action="#" class="chatArea">
+<div class="chatArea">
 	<input id='msgToSend' type="text" class="chatTextField" value="" placeholder="Mensagem:"  onKeyPress=""/>
-</form>
+</div>
 <article id="wrapperDetail" class="container">
   <div id="scrollerDetail">
   	
