--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -52,7 +52,7 @@
           </a>
         </li>
         <li class="logout">
-          <a href="/Logout">
+          <a href="/Logout" class="menuLink">
             <span>Sair</span>
             <div class="icon icon-logout"></div>
           </a>
