--- a/templates/login/loginTemplate.html
+++ b/templates/login/loginTemplate.html
@@ -1,22 +1,21 @@
 <div class="login-center" style="width: 245px; margin-top: 0px;">
       <div class="product-logo"></div>
-      <br><br>
 </div>
-
 <form method="POST" action="#/Home" class="login-box" onsubmit="">
       <div id="loadingLogin" style="width: 100%; min-height: 150px;">
             <select id="serverURL" name="serverURL" class="login-input" >
                   <option value="http://api.expresso.pr.gov.br">expresso.pr.gov.br</option>
-                  <option value="http://seed.pr.gov.br/api/rest/">seed.pr.gov.br</option>
                   <option value="http://demo.expressolivre.org/api/rest/">demo.expressolivre.org</option>
             </select>
-            <input id="username" type="username" name="username" class="login-input" value="demo" placeholder="Usuário" autofocus>
-            <input id="password" type="password" name="password" class="login-input" value="demo22" placeholder="Senha">
-            
+            <input id="username" type="username" name="username" class="login-input" value="" placeholder="Usuário" autofocus>
+            <input id="password" type="password" name="password" class="login-input" value="" placeholder="Senha">
+
             <input id="btn-login" type="button" value="Conectar" class="btn btn-primary"  onclick="" style="width: 100%;">
+
+            <br><br>
+            <input id="isPhoneGap" type="checkbox" name="isPhoneGap" value="1"> PhoneGap
       </div>
 </form>
 <div class="login-center" style="width: 245px; margin-top: 20px;">
-      <br>
       <div class="company-logo"></div>
 </div>
