--- a/templates/chat/chatListTemplate.html
+++ b/templates/chat/chatListTemplate.html
@@ -1,4 +1,4 @@
-<h2 class="ellipsis50">Bate Papo</h2>
+<h2 class="ellipsis50">Chat</h2>
 <div id="wrapper" class="container">
   <div id="scroller">
 	<dl id="scrollerList"></dl>
