--- a/templates/chat/chatWindowMessagesTemplate.html
+++ b/templates/chat/chatWindowMessagesTemplate.html
@@ -10,7 +10,7 @@
   	</div>
 	<% } else { %>
   	<div class="fullWidth">
-  		<img class="chat-picture right">
+  		<img class="myPicture chat-picture right">
   		<div class="triangle-right right">
   			<%=message.body%>
   		</div>
