--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -41,8 +41,9 @@
         </li>
         <li class="chat">
           <a href="/Chat" class="menuLink">
-            <span>Bate-papo</span>
+            <span><div id="badge_chat" class="badge badge-chat hidden"></div>Chat</span>
             <div class="icon icon-jabber"></div>
+
           </a>
         </li>
         <li class="settings">
