--- a/templates/chat/chatListItemsTemplate.html
+++ b/templates/chat/chatListItemsTemplate.html
@@ -1,56 +1,28 @@
-<% if (contacts['online'].length) { %>
-<dt>Online</dt>
+<% for (var i in contacts) { %>
+  <% if (contacts[i].length) { %>
+    <dt>
+      <% if (i == 'online') { %>Online<% } %>
+      <% if (i == 'busy') { %>Ocupado<% } %>
+      <% if (i == 'away') { %>Ausente<% } %>
+      <% if (i == 'offline') { %>Offline<% } %>
+    </dt>
+    <ul>
+      <% _.each(contacts[i], function(contact){ %>
+        <% if (contact.id != null) { %>
+        <li id="<%=contact.id%>"> 
+          <a href="/Chat/<%=contact.id%>" class="listItemLink">
+            <div class="chat-<%=i%>"></div>
+            <div id="<%=contact.id%>_badge" style="" class="badge badge-chat-list hidden"><%= contact.qtdUnread %></div>
+            <% if (contact.name != null) { %>
+            <h3 class="ellipsis20"><%= contact.name %></h3>
+            <span class="ellipsis14"><%= contact.jid %></span>
+            <% } else { %>
+            <h3 class="ellipsis20"><%= contact.jid %></h3>
+            <% } %>
+          </a>
+        </li>
+        <% } %>
+      <% }); %>
+    </ul>
+  <% } %>
 <% } %>
-<ul>
-<% _.each(contacts['online'], function(contact){ %>
-  <li id="<%=contact.id%>"> 
-    <a href="/Chat/<%=contact.id%>" class="listItemLink">
-      <div class="chat-online"></div>
-      <h3 class="ellipsis20"><%= contact.name %></h3>
-      <span class="ellipsis14"><%= contact.jid %></span>
-    </a>
-  </li>
-<% }); %>
-</ul>
-<% if (contacts['busy'].length) { %>
-<dt>Ocupado</dt>
-<ul>
-<% } %>
-<% _.each(contacts['busy'], function(contact){ %>
-  <li id="<%=contact.id%>"> 
-    <a href="/Chat/<%=contact.id%>" class="listItemLink">
-      <div class="chat-busy"></div>
-      <h3 class="ellipsis20"><%= contact.name %></h3>
-      <span class="ellipsis14"><%= contact.jid %></span>
-    </a>
-  </li>
-<% }); %>
-</ul>
-<% if (contacts['away'].length) { %>
-<dt>Ausente</dt>
-<% } %>
-<ul>
-<% _.each(contacts['away'], function(contact){ %>
-  <li id="<%=contact.id%>"> 
-    <a href="/Chat/<%=contact.id%>" class="listItemLink">
-      <div class="chat-away"></div>
-      <h3 class="ellipsis20"><%= contact.name %></h3>
-      <span class="ellipsis14"><%= contact.jid %></span>
-    </a>
-  </li>
-<% }); %>
-</ul>
-<% if (contacts['offline'].length) { %>
-<dt>Offline</dt>
-<ul>
-<% } %>
-<% _.each(contacts['offline'], function(contact){ %>
-  <li id="<%=contact.id%>"> 
-    <a href="/Chat/<%=contact.id%>" class="listItemLink">
-      <div class="chat-offline"></div>
-      <h3 class="ellipsis20"><%= contact.name %></h3>
-      <span class="ellipsis14"><%= contact.jid %></span>
-    </a>
-  </li>
-<% }); %>
-</ul>
