Atualizado informações da view de Créditos do Aplicativo.

--- a/templates/settings/settingsCreditsListTemplate.html
+++ b/templates/settings/settingsCreditsListTemplate.html
@@ -4,32 +4,41 @@
 
 		<dl id="credits">
 			
-			<dt>Projeto desenvolvido</dt>
-			<dd>CELEPAR</dd>
+			<dt>Projeto desenvolvido por:</dt>
+			<dd>CELEPAR - Companhia de Tecnologia da Informação e Comunicação do Estado do Paraná
+				<br><br>
+				<div class="company-logo"></div>
+			</dd>
 
 			<dt>Desenvolvedores</dt>
 			<dd>
 				<ul>
-					<li>João Silva</li>
-					<li>Maria Souza</li>
+					<li>Jair Gonçalves Pereira Jr</li>
+					<li>Rafael Katayama Gobara</li>
 				</ul>
 			</dd>
 
 			<dt>Desenvolvedores API</dt>
 			<dd>
 				<ul>
-					<li>Pedro Alvares</li>
-					<li>Cristóvão Colombo</li>
-					<li>Américo Vespúcio</li>
+					<li>Nilton Emilio Buhrer Neto</li>
+					<li>Jair Gonçalves Pereira Jr</li>
+					<li>Alexandre Luiz Correia</li>
+					<li>Anderson Tadayuki Saikawa</li>
 				</ul>
 			</dd>
 
 			<dt>Biliotecas utilizadas</dt>
 			<dd>
 				<ul>
+					<li>Bacbkone</li>
+					<li>RequireJS</li>
+					<li>Underscore</li>
 					<li>jQuery</li>
 					<li>PhoneGap</li>
 					<li>iScroll</li>
+					<li>jQuery Dot Dot Dot</li>
+					<li>jQuery XMPP</li>
 				</ul>
 			</dd>
 
