--- a/templates/settings/settingsAboutListTemplate.html
+++ b/templates/settings/settingsAboutListTemplate.html
@@ -5,10 +5,18 @@
 		<dl id="aboutExpresso">
 			
 			<dt>O que é</dt>
-			<dd>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</dd>
+			<dd>O Expresso Livre é uma solução completa de comunicação que reúne Email, Agenda, Catálogo de Endereços, Workflow e Mensagens Instantâneas em um único ambiente. Por ser uma versão customizada do E-GroupWare, seu desenvolvimento também é totalmente baseado em software livre.</dd>
 
 			<dt>Características</dt>
-			<dd>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</dd>
+			<dd>- Alta Escalabilidade<br>
+				- Baixo custo<br>
+				- Utilização de protocolos padrões<br>
+				- Integração com outros sistemas Web<br>
+				- Independência de fornecedor<br>
+				- Independência de plataforma cliente<br>
+				- Independência de plataforma servidor<br>
+				- Mobilidade dos usuários<br>
+			</dd>
 
 			<dt>Saiba mais</dt>
 			<dd><a href="#">www.expressolivre.org</a></dd>
@@ -16,9 +24,9 @@
 			<dt>Versões</dt>
 			<dd>
 				<ul>
-					<li>Application version 1.0</li>
-					<li>Expresso version 2.2</li>
-					<li>API Version 1.0</li>
+					<li>Versão da Aplicação <%=appVersion%></li>
+					<li>Versão do Expresso <%=expressoVersion%></li>
+					<li>Versão da API <%=apiVersion%></li>
 				</ul>
 			</dd>
 				
