Implementação do módulo de contatos

--- a/templates/contacts/contactsListTemplate.html
+++ b/templates/contacts/contactsListTemplate.html
@@ -1,10 +1,9 @@
 <h2 id="contentTitle" class="ellipsis50">Contatos Pessoais</h2>
+
+<div class="searchArea">
+	<input type="text" class="searchField" value="" placeholder="Procurar Por:" />
+</div>
+
 <div id="wrapper" class="container">
-	<div id="scroller">
-
-		<dl id="contactsAList">
-			
-		</dl>
-
-	</div>
+	<div id="scroller"></div>
 </div>
