--- a/templates/home/menuTemplate.html
+++ b/templates/home/menuTemplate.html
@@ -34,7 +34,7 @@
           </a>
         </li>
         <li class="contacts">
-          <a href="/Contacts" class="menuLink">
+          <a href="/Contacts/Personal" class="menuLink">
             <span>Contatos</span>
             <div class="icon icon-contacts"></div>
           </a>
