Correção na Busca de Mensagens.

--- a/templates/mail/messagesListTemplate.html
+++ b/templates/mail/messagesListTemplate.html
@@ -1,8 +1,8 @@
 
 <h2 class="ellipsis50"><%=folderID%></h2>
-<form action="#" class="searchArea">
-  <input type="text" value="" placeholder="Procurar Por:" />
-</form>
+<div class="searchArea">
+  <input id="searchField" type="text" value="" placeholder="Procurar Por:" />
+</div>
 
 <div id="wrapper" class="container">
   <div id="scroller">
