--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -9,13 +9,8 @@
         <li><a id="menuButton" href="#" class="menu">Menu</a></li>
       </ul> 
       
-      <ul class="right topButtons">
-        <li><a id="contextMenuButton" href="#" class="hidden contextMenu">Menu de contexto</a></li>
-      </ul>
-
-      <div id="contextMenu" class="hidden">
-        <ul>
-        </ul>
+      <div id="rightMenu">
+        
       </div>
 
     </header>
