--- a/templates/home/homeTemplate.html
+++ b/templates/home/homeTemplate.html
@@ -10,7 +10,7 @@
       </ul> 
       
       <ul class="right topButtons">
-        <li><a id="contextMenuButton" href="#" class="hidden contextMenu">Menu de contexto</a></li>
+        <li><a id="contextMenuButton" href="#" class="contextMenu">Menu de contexto</a></li>
       </ul>
 
       <div id="contextMenu" class="hidden">
