--- a/templates/mail/detailMessageTemplate.html
+++ b/templates/mail/detailMessageTemplate.html
@@ -68,7 +68,7 @@
               <div class="clear"></div>
             
             </div>
-    <p><%= message.get("msgBody") %></p>
+    <p><%=message.getMessageBody(false)%></p>
   </div>
 </article>
 <% }); %>
