--- a/templates/master/detailContentTemplate.html
+++ b/templates/master/detailContentTemplate.html
@@ -1,4 +1,4 @@
-<h2 id="contentTitle" class="ellipsis50"></h2>
+<h2 id="contentDetailTitle" class="ellipsis50"></h2>
 
 <div id="wrapperDetail" class="container">
 	<div id="scrollerDetail"></div>
